fix border-top of single thing on mobile

--- a/app/assets/stylesheets/views/home.css.scss
+++ b/app/assets/stylesheets/views/home.css.scss
@@ -553,12 +553,7 @@ html.signed_in_homepage {
   }
 
   .article_compact {
-    border-top: $border-default;
     padding-bottom: 0;
-
-    @media screen and (min-width: $screen-sm-min) {
-      border-top: none;
-    }
 
     .article_feature {
       bottom: 0;
@@ -743,6 +738,14 @@ html.signed_in_homepage {
           @media screen and (min-width: $screen-sm-min) {
             border-right: $border-default;
           }
+        }
+      }
+
+      .col-sm-12 {
+        border-top: $border-default;
+
+        @media screen and (min-width: $screen-sm-min) {
+          border-top: none;
         }
       }
     }
